src/tests/testfiles/binary-operator-types-18.txt
Error at 2:5: Binary operator operands must have the same type (have char rvalue and float rvalue)
'c' * 5.9;
^
